--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+
+.carousel-item {
+  position: absolute;
+  width: 100%;
+  transition: opacity 0.5s ease-in-out;
+}
+
+
 .App {
   text-align: center;
 }
